syntax = "proto3";

import "Protos/base.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Cpnucleo.RazorPages.Protos.RecursoProto";

package recurso;

service RecursoProto {

	rpc Incluir (RecursoModel) returns (RecursoModel);
	rpc Listar (google.protobuf.Empty) returns (stream RecursoModel);
	rpc Consultar (base.BaseRequest) returns (RecursoModel);
	rpc Alterar (RecursoModel) returns (base.BaseReply);
	rpc Remover (base.BaseRequest) returns (base.BaseReply);
	rpc Autenticar (AutenticarRequest) returns (RecursoModel);
}

message RecursoModel {

	string Id = 1;
	string Nome = 2;
	string Login = 3;
	google.protobuf.StringValue Senha = 4;
	google.protobuf.StringValue ConfirmarSenha = 5;	
	google.protobuf.StringValue Salt = 6;
	google.protobuf.StringValue Token = 7;
	string DataInclusao = 8;
}

message AutenticarRequest {

	string Login = 1;
	string Senha = 2;
}